Spike 1: Fixed issue with arrows getting too long and switching between scenes.

--- a/app/components/grid-slider/grid-slider.scss
+++ b/app/components/grid-slider/grid-slider.scss
@@ -39,11 +39,13 @@ All Rights Reserved.
       fill: gray;
       stroke: none;
       font-size: 14px;
+      pointer-events: none;
     }
     .hint-text-detail {
       fill: gray;
       stroke: none;
       font-size: 10px;
+      pointer-events: none;
     }
   }
 
