--- a/app/css/n.css
+++ b/app/css/n.css
@@ -3568,11 +3568,13 @@ body {
     .grid-slider .svg-container .hint-text-title {
       fill: gray;
       stroke: none;
-      font-size: 14px; }
+      font-size: 14px;
+      pointer-events: none; }
     .grid-slider .svg-container .hint-text-detail {
       fill: gray;
       stroke: none;
-      font-size: 10px; }
+      font-size: 10px;
+      pointer-events: none; }
   .grid-slider .horizontal-slider-container {
     text-align: center; }
     .grid-slider .horizontal-slider-container .slider {
